public/css/target.css
#section-target {
  width: 80%;
  margin-top: 2%;
  height: 60vh;
  overflow-y: scroll;
  display: flex;
  flex-wrap: wrap;
  align-content: center;
  justify-content: center;
}
#section-target .card {
  background-color: #666666;
  margin: 2%;
  width: 20%;
  height: 15vh;
  display: flex;
  justify-content: space-around;
  align-items: center;
  color: #666666;
  font-family: dream;
  font-size: 1.5em;
  text-align: center;
}
#section-target .card-actived {
  background-color: #50B748;
  color: black;
  margin: 2%;
  width: 20%;
  height: 15vh;
  display: flex;
  justify-content: space-around;
  align-items: center;
  font-family: dream;
  font-size: 1.5em;
  text-align: center;
}

/*# sourceMappingURL=target.css.map */

